2007-06-25 Ales Hvezda   <ahvezda@geda.seul.org>

	Backported the following fix by Carlos Nieves Onega:

		* scheme/gschem.c: Changed nil by #f.

		Nil is no longer supported by guile 1.8. Applied patch from
		Peter Clifton changing nil by #f. Thanks.
		Note there are still some files using nil.

2007-05-26 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/x_image.c: Applied fix for "Write image" seg fault found (and
	fixed) by Robert Fitzsimons.  Thanks!

2007-05-25 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to 20070526 in prep for the next
        release.

2007-05-15 Peter Clifton <pcjc2@cam.ac.uk>

	* src/o_complex.c: Fixed offset in o_complex_translate_all to
	  be relative to bottom left of world bounds. This bug appears
	  to have crept in when switching to world coords, as the
	  numerical sense of "top" and "bottom" are switched around.
	  These variables eventually need renaming {x|y}_{min|max} to
	  avoid further confusion.

2007-05-14 Werner Hoch  <werner.ho@gmx.de>

	*po/de_DE.po: updated german translation

	*src/rcstrings.c: added new menu entries

2007-05-13 Ales Hvezda   <ahvezda@geda.seul.org>

	* po/nl_NL.po: Copied in new updated Dutch translation from 
	Bert Timmerman.  Thanks.

	* po/it_IT.po: Copied in new updated Italian translation from
	Michele Petrecca.  Thanks.

2007-05-10 Peter Brett <peter@peter-b.co.uk>

	* include/prototype.h, src/x_menus.c: Provide
	  g_file_set_contents() if GLib < 2.8.

	  Patch from Ivan Stankovic, fixing problem with recent files
	  support where gschem didn't work on systems with older versions
	  of GLib, due to g_file_set_contents() not being available.

2007-05-05 Peter Brett <peter@peter-b.co.uk>

	* include/prototype.h, lib/system-gschemrc.in, src/gschem.c,
	  src/x_menus.c, src/x_window.c: Add "Recent Files" list to
	  gschem.

	  Applied patch #1706411 by Ivan Stankovic, which adds a list of
	  recently-accessed files to gschem's File menu.
	